--- a/molecule/gitlabci/verify.yml
+++ b/molecule/gitlabci/verify.yml
@@ -2,6 +2,18 @@
 # Don't forget to keep this file updated
 # molecule/<scenario>/verify.yml
 - name: "Verify"
-  hosts: "all"
+  hosts: "{{ tower_env | default([]) }}:&PIHOLE"
   gather_facts: false
   tasks:
+
+    - name: "Check PiHole services and connectivities"
+      loop:
+        - 80
+        - 53
+        - 4711
+      loop_control:
+        loop_var: port
+      ansible.builtin.wait_for:
+        host: "127.0.0.1"
+        port: "{{ port }}"
+        timeout: 120
