--- a/tests/inventory/hosts.yml
+++ b/tests/inventory/hosts.yml
@@ -4,3 +4,6 @@ all:
     local:
       hosts:
         molecule-local-instance-1-deploy-pihole:
+    PIHOLE:
+      hosts:
+        molecule-local-instance-1-deploy-pihole:
