--- a/molecule/default/prepare.yml
+++ b/molecule/default/prepare.yml
@@ -28,28 +28,14 @@
       changed_when: output.rc != 0
       ansible.builtin.shell: "echo \"{{ hostvars[host]['ansible_default_ipv4']['address'] }}  {{ host }} # from Molecule\" >> /etc/hosts"
 
-    #- name: "Import cryptographic content if needed (cert)"
+    #- name: "Import cryptographic content if needed"
     #  run_once: yes
     #  loop: "{{ inv_cert_bundles }}"
     #  loop_control:
     #    loop_var: bundle
-    #  when: inv_cert_bundles is defined and bundle.type == "cert"
     #  ansible.builtin.copy:
     #    src: "../../tests/certs/{{ bundle.name }}.zip"
     #    dest: "/tmp/{{ bundle.name }}.zip"
-    #    owner: "root"
-    #    group: "root"
-    #    mode: 0700
-
-    #- name: "Import cryptographic content if needed (CA)"
-    #  run_once: yes
-    #  loop: "{{ inv_cert_bundles }}"
-    #  loop_control:
-    #    loop_var: bundle
-    #  when: inv_cert_bundles is defined and bundle.type == "CA"
-    #  ansible.builtin.copy:
-    #    src: "../../tests/certs/{{ bundle.name }}"
-    #    dest: "/tmp/{{ bundle.name }}"
     #    owner: "root"
     #    group: "root"
     #    mode: 0700
@@ -60,7 +46,6 @@
     #  loop: "{{ inv_cert_bundles }}"
     #  loop_control:
     #    loop_var: bundle
-    #  when: inv_cert_bundles is defined
     #  vars:
     #    add_certificates_bundle_name: "{{ bundle.name }}"
     #    add_certificates_bundle_type: "{{ bundle.type }}"
@@ -71,5 +56,5 @@
     #    #add_certificates_bundle_dest_user: "{{ bundle.dest_user }}"
     #    #add_certificates_bundle_dest_group: "{{ bundle.dest_group }}"
     #    #add_certificates_bundle_dest_mode: "{{ bundle.dest_mode }}"
-    #  ansible.builtin.include_role:
+    #  ansible.builtin.include_playbook:
     #    name: "labocbz.add_certificates"
