--- a/requirements.yml
+++ b/requirements.yml
@@ -6,3 +6,15 @@
 - name: "labocbz.install_pihole"
   src: "https://github.com/CBZ-D-velop/Ansible-Role-Labocbz-Install-PiHole.git"
   version: "2.0"
+
+- name: "labocbz.add_certificates"
+  src: "https://github.com/CBZ-D-velop/Ansible-Role-Labocbz-Add-Certificates.git"
+  version: "2.0"
+
+- name: "labocbz.install_apache"
+  src: "https://github.com/CBZ-D-velop/Ansible-Role-Labocbz-Install-Apache.git"
+  version: "3.1"
+
+- name: "labocbz.add_apache_confs"
+  src: "https://github.com/CBZ-D-velop/Ansible-Role-Labocbz-Add-Apache-Confs.git"
+  version: "3.1"
