--- a/tests/inventory/hosts.yml
+++ b/tests/inventory/hosts.yml
@@ -7,3 +7,6 @@ all:
     PIHOLE:
       hosts:
         molecule-local-instance-1-deploy-pihole:
+    APACHE2:
+      hosts:
+        molecule-local-instance-1-deploy-pihole:
