--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -11,8 +11,10 @@ platforms:
   - name: "molecule-local-instance-1-deploy-pihole"
     image: "robincbz/debian-11-ansible:latest"
     command: "/sbin/init"
-    #published_ports:
-    #  - "0.0.0.0:8181:8181/tcp"
+    published_ports:
+      - "0.0.0.0:80:80/tcp"
+      - "0.0.0.0:8080:8080/tcp"
+      - "0.0.0.0:8443:8443/tcp"
     dockerfile: "Dockerfile"
     privileged: true
     pre_build_image: true
