--- a/tests/inventory/host_vars/molecule-local-instance-1-deploy-pihole.yml
+++ b/tests/inventory/host_vars/molecule-local-instance-1-deploy-pihole.yml
@@ -2,6 +2,7 @@
 ansible_ssh_port: 22
 
 inv_install_apache: true
+inv_install_pihole: true
 
 inv_add_apache_confs_http_listen_port: "{{ inv_install_apache_http_listen_port }}"
 inv_add_apache_confs_https_listen_port: "{{ inv_install_apache_https_listen_port }}"
