--- a/tests/inventory/group_vars/PIHOLE.yml
+++ b/tests/inventory/group_vars/PIHOLE.yml
@@ -1,4 +1,5 @@
 ---
+inv_install_pihole: true
 
 inv_install_pihole_webpassword: "admin"
 inv_install_pihole_interface: "{{ hostvars[ansible_hostname]['ansible_default_ipv4']['interface'] }}"
