--- a/molecule/cicd-debian-11/converge.yml
+++ b/molecule/cicd-debian-11/converge.yml
@@ -2,4 +2,6 @@
 - name: "Include labocbz.deploy_pihole playbook"
   tags:
       - "labocbz.deploy_pihole"
+  vars:
+    tower_env: "cicd-debian-11"
   ansible.builtin.import_playbook: "../../playbook.yml"
