--- a/molecule/cicd-debian-11/verify.yml
+++ b/molecule/cicd-debian-11/verify.yml
@@ -2,7 +2,7 @@
 # Don't forget to keep this file updated
 # molecule/<scenario>/verify.yml
 - name: "Verify"
-  hosts: "all:&PIHOLE"
+  hosts: "cicd-debian-11"
   gather_facts: false
   tasks:
 
@@ -18,16 +18,9 @@
         port: "{{ port }}"
         timeout: 120
 
-# Don't forget to keep this file updated
-# molecule/<scenario>/verify.yml
-- name: "Verify"
-  hosts: "all:&APACHE2"
-  gather_facts: false
-  tasks:
-
     - name: "Get Apache2 service current state"
-      register: install_apache_service_status
-      failed_when: not install_apache_service_status.status.ActiveState == 'active'
+      register: install_apache__service_status
+      failed_when: not install_apache__service_status.status.ActiveState == 'active'
       ansible.builtin.systemd:
         name: "apache2"
 
@@ -45,13 +38,13 @@
     - name: "Check Apache2 HTTP connectivity"
       ansible.builtin.wait_for:
         host: "{{ inventory_hostname }}"
-        port: "{{ inv_install_apache_http_listen_port }}"
+        port: "{{ inv_install_apache__http_listen_port }}"
         timeout: 120
 
     - name: "Check Apache2 HTTPS connectivity"
       ansible.builtin.wait_for:
         host: "{{ inventory_hostname }}"
-        port: "{{ inv_install_apache_https_listen_port }}"
+        port: "{{ inv_install_apache__https_listen_port }}"
         timeout: 120
 
     - name: "Get Apache2 service current state"
@@ -74,26 +67,26 @@
             path: "{{ folder_path }}"
 
         - name: "Check Apache2 HTTP and conf"
-          loop: "{{ inv_add_apache_confs_configurations }}"
+          loop: "{{ inv_add_apache_confs__configurations }}"
           loop_control:
             loop_var: vhost
           register: folder_check
           failed_when: not folder_check.stat.exists
           ansible.builtin.stat:
-            path: "{{ inv_add_apache_confs_conf_path }}/{{ vhost.server.name }}-HTTP.conf"
+            path: "{{ inv_add_apache_confs__conf_path }}/{{ vhost.server.name }}-HTTP.conf"
 
         - name: "Check Apache2 HTTPS and conf"
-          loop: "{{ inv_add_apache_confs_configurations }}"
+          loop: "{{ inv_add_apache_confs__configurations }}"
           loop_control:
             loop_var: vhost
           register: folder_check
           when: vhost.ssl
           failed_when: not folder_check.stat.exists
           ansible.builtin.stat:
-            path: "{{ inv_add_apache_confs_conf_path }}/{{ vhost.server.name }}-HTTPS.conf"
+            path: "{{ inv_add_apache_confs__conf_path }}/{{ vhost.server.name }}-HTTPS.conf"
 
         - name: "Check HTTPS conf: certs"
-          loop: "{{ inv_add_apache_confs_configurations }}"
+          loop: "{{ inv_add_apache_confs__configurations }}"
           loop_control:
             loop_var: vhost
           register: folder_check
@@ -103,7 +96,7 @@
             path: "{{ vhost.ssl.crt }}"
 
         - name: "Check HTTPS conf: keys"
-          loop: "{{ inv_add_apache_confs_configurations }}"
+          loop: "{{ inv_add_apache_confs__configurations }}"
           loop_control:
             loop_var: vhost
           register: folder_check
@@ -117,19 +110,19 @@
         - name: "Check Apache2 connectivity"
           ansible.builtin.wait_for:
             host: "{{ inventory_hostname }}"
-            port: "{{ inv_add_apache_confs_http_listen_port }}"
+            port: "{{ inv_add_apache_confs__http_listen_port }}"
             timeout: 120
 
         - name: "Check default vhost on HTTP"
           register: result
           failed_when: not (result.status != 200 or result.status == -1)
           ansible.builtin.uri:
-            url: "http://{{ inventory_hostname }}:{{ inv_add_apache_confs_http_listen_port }}/"
+            url: "http://{{ inventory_hostname }}:{{ inv_add_apache_confs__http_listen_port }}/"
             method: "GET"
 
         - name: "Check default vhost on HTTPS"
           register: result
           failed_when: not (result.status != 200 or result.status == -1)
           ansible.builtin.uri:
-            url: "https://{{ inventory_hostname }}:{{ inv_add_apache_confs_https_listen_port }}/"
+            url: "https://{{ inventory_hostname }}:{{ inv_add_apache_confs__https_listen_port }}/"
             method: "GET"
