--- a/tests/inventory/hosts.yml
+++ b/tests/inventory/hosts.yml
@@ -4,9 +4,24 @@ all:
     local:
       hosts:
         molecule-local-instance-1-deploy-pihole:
-    PIHOLE:
+    cicd-debian-12:
       hosts:
-        molecule-local-instance-1-deploy-pihole:
+        molecule-cicd-debian-12-instance-1-deploy-pihole:
+    cicd-debian-11:
+      hosts:
+        molecule-cicd-debian-11-instance-1-deploy-pihole:
+    cicd-ubuntu-22:
+      hosts:
+        molecule-cicd-ubuntu-22-instance-1-deploy-pihole:
     APACHE2:
       hosts:
         molecule-local-instance-1-deploy-pihole:
+        molecule-cicd-debian-12-instance-1-deploy-pihole:
+        molecule-cicd-debian-11-instance-1-deploy-pihole:
+        molecule-cicd-ubuntu-22-instance-1-deploy-pihole:
+    PIHOLE:
+      hosts:
+        molecule-local-instance-1-deploy-pihole:
+        molecule-cicd-debian-12-instance-1-deploy-pihole:
+        molecule-cicd-debian-11-instance-1-deploy-pihole:
+        molecule-cicd-ubuntu-22-instance-1-deploy-pihole:
